solved timestamp problems and closing the sensor reads.

--- a/wear/src/main/res/layout/activity_config.xml
+++ b/wear/src/main/res/layout/activity_config.xml
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:keepScreenOn="true"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal">
@@ -37,21 +37,20 @@
                 android:id="@+id/userIdText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:minHeight="60dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                android:text="Name" />
+                android:hint="Introduce código de usuario" />
 
             <Button
                 android:id="@+id/saveUserIdButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:background="@android:color/holo_green_dark"
                 android:text="GUARDAR" />
 
-
         </LinearLayout>
-
-
 
     </FrameLayout>
 </androidx.wear.widget.BoxInsetLayout>
